[package]
name = "flood-it"
description = "Flood-it game logic in Rust for WASM"
version = "0.1.0"
authors = ["Sam Joseph <denialanderror@googlemail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[features]
# If you uncomment this line, it will enable `wee_alloc`:
#default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.45"

wee_alloc = { version = "0.4.2", optional = true }
js-sys = "0.3.39"
rand = { version = "0.7", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.22", features = ["console"]}

[target."cfg(debug_assertions)".dependencies]
console_error_panic_hook = "0.1.5"
