[package]
name = "flood-it"
description = "Flood-it game logic in Rust targetting WebAssembly"
version = "0.1.0"
authors = ["Sam Joseph <denialanderror@googlemail.com>"]
categories = ["wasm"]
readme = "README.md"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true

[features]

[dependencies]
wasm-bindgen = "0.2.45"
js-sys = "0.3.39"
rand = { version = "0.7", features = ["wasm-bindgen"] }
web-sys = { version = "0.3.22", features = ["console"]}
console_error_panic_hook = "0.1.5"
